CHANGE LOG: NUKEVIET CMS
http://nukeviet.vn
NUKEVIET 4.6.00
- Update Chart.js to v3.5.1
- Module Statistics: Improve the Statistics module
- System: Add ability to exclude connection to js files of Default theme
- System: Allows saving cookie/session with array values
- Module Users: Manage changing user account password (Impact on interface)
- System: Fixed users redirection module when integrating sso (Impact on interface)

NUKEVIET 4.5.01
- System: Centralized Captcha Management #3348
- All modules: Fix $page_url definition
- System: Fix error in getCanonicalUrl function

NUKEVIET 4.5.00
- Configure variable "page_title" relative to func_site_title
- Update Browser class to v1.9.6
- Update Chart.js to v3.3.2, jquery.js to v3.6, jQuery Validation Plugin to v1.19.3, clipboard.js to v2.0.8, Select2.js to v.4.1.0-rc.0, jquery.timeago.js to version 1.6.7, CKeditor to v4.16.1
- System package updates: polyfill-mbstring (v1.3.0 => v1.23.0), gregwar/cache (v1.0.12 => v1.0.13), gregwar/image (v2.0.21 => v2.0.28), and/oauth (dev-master 48fa6e7 => dev-master 700b769), symfony/options-resolver (v3.2.6 => v3.4.47), endroid/qrcode (1.9.1 => 1.9.3), phpmailer/phpmailer (v6.1.6 => v6.5.0)
- System: Removed non-standard property "zoom" in CSS
- System: Disable email engines from automatically hyperlinking a URL
- Module News: Redesigned "Recommend article to your friend" tool
- Module Users: Fix error "Email Hyperlink Injection". Thanks mcsoon at WhiteHub#1610
- System: Hide file composer.json
- System: Fix potential Cross-site Scripting (XSS) Errors
- Module News: Add module-level on/off button for article rating function
- System: Block Google FLoC
- System: Add SameSite attribute to cookie
- System: Add Link header (preload)
- System: Add link-tag settings
- System: Add Referrer-Policy
- System: Add rel=noreferrer to external links
- System: Add default image configuration for Open Graph tags
- System: Add Content-Security-Policy
- Module Upload: Add image mode for mobile