@@ -1,6 +1,7 @@
 CHANGE LOG: NUKEVIET CMS
 http://nukeviet.vn
 NUKEVIET 4.6.00
+- System: Add nonce attribute management to CSP
 - Update Chart.js to v3.5.1
 - Module Statistics: Improve the Statistics module
 - System: Add ability to exclude connection to js files of Default theme
